--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -6,7 +6,7 @@
 
 <h2>Registrarse</h2>
 
- <form action="/productos/registrarse" method="post">
+ <form action="/nuevoUsuario" method="post">
   <label for="name">Nombre:</label>
   <input id="name" name="name" type="text"><br><br>
   
