--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -6,21 +6,21 @@
 
 <h2>Registrarse</h2>
 
- <form action="/productos/registrarse" method="post">
-  <label for="name">Nombre:</label>
-  <input id="name" name="name" type="text"><br><br>
-  
-  <label for="username">Usuario:</label>
-  <input id="username" name="username" type="text"><br><br>
-  
-  <label for="email">Email:</label>
-  <input id="email" name="email" type="text"><br><br>
-  
+<form action="/productos/registrarse" method="post">
+    <label for="name">Nombre:</label>
+    <input minlength=2 id="name" name="name" type="text"><br><br>
+
+    <label for="username">Usuario:</label>
+    <input minlength=2 id="username" name="username" type="text"><br><br>
+
+    <label for="email">Email:</label>
+    <input id="email" name="email" type="text"><br><br>
+
     <label for="password">Contraseña</label>
-  <input id="password" name="password" type="password"><br><br>
-  
-  <input type="submit" value="Registrarse">
- </form>
+    <input minlength=8 id="password" name="password" type="password"><br><br>
+
+    <input type="submit" value="Registrarse">
+</form>
 
 </body>
 </html>
