--- a/src/main/resources/static/upload_product.html
+++ b/src/main/resources/static/upload_product.html
@@ -8,7 +8,7 @@
 
  <form action="/productos/nuevoProducto" method="post">
   <label for="name">Nombre:</label>
-  <input id="name" name="name" type="text"><br><br>
+  <input minlength="2" id="name" name="name" type="text"><br><br>
   
   <label for="price">Precio:</label>
   <input id="price" min="0" name="price" step="any" type="number"><br><br>
@@ -17,7 +17,7 @@
   <input id="stock" min="0" name="stock" type="number"><br><br>
   
   <label for="category">Categoría:</label>
-  <input id="category" name="category" type="text"><br><br>
+  <input minlength="2" id="category" name="category" type="text"><br><br>
   
   <label for="url">Imagen URL:</label>
   <input id="url" name="url" type="url"><br><br>
