añadir promoción desde la vista

--- a/src/main/resources/static/upload_product.html
+++ b/src/main/resources/static/upload_product.html
@@ -12,9 +12,13 @@
   
   <label for="price">Precio:</label>
   <input id="price" min="0" name="price" step="any" type="number"><br><br>
+
+  <label for="promotion">Oferta:</label>
+  <input id="promotion" min="0" max="100" name="promotion" type="number"><br><br>
   
   <label for="stock">Stock:</label>
   <input id="stock" min="0" name="stock" type="number"><br><br>
+
   
   <label for="category">Categoría:</label>
   <input minlength="2" id="category" name="category" type="text"><br><br>
